// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paywall and Regwall should match the snapshot for paywall data 1`] = `
<section
  className="css-793fq4-wrapperStyles"
>
  <header
    className="css-1rpvrys-headerStyles"
  >
    <h2>
      You’ve reached your article limit
    </h2>
    <p>
      Subscribe now to get full access to 
      <i>
        The Economist
      </i>
       via print, online and our apps.
    </p>
  </header>
  <div
    className="css-mt52t7-subscribeButtonWrapperStyles"
  >
    <a
      className="e18299l00 css-18wxk9z-StyledLink-LargeSubscribeButton e1ob2h4l0"
      href="https://econ.st/2bs1gXz"
      role="button"
    >
      Subscribe
    </a>
  </div>
  <section
    className="css-ewotou-listWrapperStyles"
  >
    <ul
      className="css-1csi2et-listStyles"
    >
      <li
        className="css-igp5vx-listItemStyles"
      >
        <b>
          Print or digital edition
        </b>
         - 
        delivered to you each week
      </li>
      <li
        className="css-igp5vx-listItemStyles"
      >
        <b>
          Economist.com
        </b>
         - 
        including blog content updated throughout the week and our online archive
      </li>
      <li
        className="css-igp5vx-listItemStyles"
      >
        <b>
          Audio edition
        </b>
         - 
        each week’s issue read by professional broadcasters
      </li>
      <li
        className="css-igp5vx-listItemStyles"
      >
        <b>
          The Economist Espresso
        </b>
         - 
        your morning briefing direct to your smartphone or inbox
      </li>
    </ul>
  </section>
  <section
    className="css-1a0behp-imageWrapperStyles"
  >
    <amp-img
      alt="paywall-image"
      height={900}
      layout="responsive"
      sizes={undefined}
      src="https://i.piano.io/managedservices/theeconomist/regwall-product.png"
      srcset={undefined}
      width={1600}
    />
  </section>
  <footer
    className="css-12czfv6-footerStyles"
  >
    <p>
      Student and gift subscriptions also available.
       
      <a
        className="css-1h5t0lq-StyledLink e2cf1b50"
        href="https://subscription.economist.com/DE/EngCore/Ecom/SubWall"
      >
        Subscribe now
      </a>
    </p>
  </footer>
</section>
`;

exports[`Paywall and Regwall should match the snapshot for regwall data 1`] = `
<section
  className="css-793fq4-wrapperStyles"
>
  <section
    className="css-8n2js-sectionStyles"
  >
    <p
      className="css-hggkb-sectionContentStyles"
    >
      Already signed up or a subscriber?
       
      <a
        className="css-1h5t0lq-StyledLink e2cf1b50"
        href="https://authenticate.economist.com/login"
      >
        Log in
      </a>
    </p>
  </section>
  <header
    className="css-1rpvrys-headerStyles"
  >
    <h2>
      You’ve reached your article limit
    </h2>
    <p>
      Sign up to keep reading or subscribe now to get full access to
       
      <i>
        The Economist
      </i>
       via print, online and our apps.
    </p>
  </header>
  <div
    className="css-mt52t7-subscribeButtonWrapperStyles"
  >
    <a
      className="e18299l00 css-18wxk9z-StyledLink-LargeSubscribeButton e1ob2h4l0"
      href="https://econ.st/2bs1gXz"
      role="button"
    >
      Subscribe
    </a>
  </div>
  <p
    className="css-mvffl9-textStyles"
  >
    <i>
      The Economist
    </i>
     delivers incisive analysis on the issues that matter.
  </p>
  <div
    className="css-mt52t7-subscribeButtonWrapperStyles"
  >
    <a
      className="e18299l01 css-1aftcze-StyledLink-LargeSubscribeButton-LargeSubscribeButtonInvertedStyles e1ob2h4l0"
      href="https://econ.st/2bs1gXz"
      role="button"
    >
      Sign up: 3 articles per week
    </a>
  </div>
  <section
    className="css-1a0behp-imageWrapperStyles"
  >
    <amp-img
      alt="paywall-image"
      height={900}
      layout="responsive"
      sizes={undefined}
      src="https://i.piano.io/managedservices/theeconomist/regwall-product.png"
      srcset={undefined}
      width={1600}
    />
  </section>
  <p
    className="css-mvffl9-textStyles"
  >
    Subscribe now to enjoy:
  </p>
  <section
    className="css-ewotou-listWrapperStyles"
  >
    <ul
      className="css-1csi2et-listStyles"
    >
      <li
        className="css-igp5vx-listItemStyles"
      >
        <b>
          Print or digital edition
        </b>
         - 
        delivered to you each week
      </li>
      <li
        className="css-igp5vx-listItemStyles"
      >
        <b>
          Economist.com
        </b>
         - 
        including blog content updated throughout the week and our online archive
      </li>
      <li
        className="css-igp5vx-listItemStyles"
      >
        <b>
          Audio edition
        </b>
         - 
        each week’s issue read by professional broadcasters
      </li>
      <li
        className="css-igp5vx-listItemStyles"
      >
        <b>
          The Economist Espresso
        </b>
         - 
        your morning briefing direct to your smartphone or inbox
      </li>
    </ul>
  </section>
  <footer
    className="css-12czfv6-footerStyles"
  >
    <p>
      Student and gift subscriptions also available.
       
      <a
        className="css-1h5t0lq-StyledLink e2cf1b50"
        href="https://subscription.economist.com/DE/EngCore/Ecom/RegWall"
      >
        Subscribe now
      </a>
    </p>
  </footer>
</section>
`;
